--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -14,6 +14,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from easyrad import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "find_files('*')"
    ]
   },
